--- a/cloud-browser.yaml
+++ b/cloud-browser.yaml
@@ -1,22 +1,21 @@
 #cloud-config
-# version: 3.13
+# version: 3.14
 
-# Droplet Init Config v3.13 - 2026-02-03
+# Droplet Init Config v3.14 - 2026-02-03
 # FAST BOOT: Bot online in ~3 min, desktop ready in background
 # Phase 1: nodejs + openclaw + minimal config -> bot talks
 # Phase 2: packages, desktop, xrdp, skills (background)
 #
-# v3.13 Changes:
-# - FIXED: Added missing plugins/hooks/dmPolicy to openclaw configs
-# - FIXED: Renamed clawdbot -> openclaw throughout
-# - NEW: Post-reboot health check with safe mode fallback
-# - NEW: Bot self-announcement on boot via BOOT.md
-# - NEW: SAFE_MODE.md for self-healing when full config fails
-# - NEW: IDENTITY.md per agent workspace (not root)
-# - NEW: GLOBAL_AGENT_NOTES_B64 for shared agent context
-# - NEW: AGENT1_NOTES_B64 through AGENT4_NOTES_B64 for per-agent identity
-# - REMOVED: BOT_NAME_B64/BOT_NOTES_B64 (use AGENT1_NAME/NOTES instead)
-# - FIXED: No emojis in messages (breaks iOS Shortcuts)
+# v3.14 Changes (from v3.13):
+# - FIX: Binary path /usr/local/bin/openclaw (not /usr/bin/openclaw)
+# - FIX: HEARTBEAT.md symlinked to agent workspaces (was only at shared root)
+# - FIX: setup-complete sentinel created after successful post-boot-check
+# - FIX: NODE_OPTIONS=--experimental-sqlite for memory search (node:sqlite)
+# - FIX: needrestart bootcmd removed (write_files handles it correctly)
+# - NEW: tg-notify.sh helper for early Telegram notifications
+# - NEW: Early Telegram notification in Phase 1 to confirm connectivity
+# - NEW: AGENT*_SOUL_B64 variables for per-agent SOUL.md (personality/tone)
+# - KEPT: All v3.13 fixes (plugins, hooks, dmPolicy, multi-agent, safe mode)
 #
 # === PLACEHOLDER REFERENCE ===
 # All placeholders use [[NAME]] format, replaced by iOS Shortcuts
@@ -29,7 +28,7 @@ bootcmd:
   - [ bash, -lc, "mkdir -p /var/lib/init-status; [ -f /var/lib/init-status/setup-complete ] && exit 0; echo '0' > /var/lib/init-status/stage; echo '1' > /var/lib/init-status/phase; echo \"$(date -u +%Y-%m-%dT%H:%M:%SZ) STAGE=0 PHASE=1 DESC=init\" >> /var/log/init-stages.log" ]
   - [ bash, -lc, "[ -f /var/lib/init-status/setup-complete ] && exit 0; systemctl stop apt-daily.timer apt-daily-upgrade.timer apt-daily.service apt-daily-upgrade.service unattended-upgrades 2>/dev/null || true; systemctl disable apt-daily.timer apt-daily-upgrade.timer 2>/dev/null || true; killall -9 unattended-upgr apt apt-get dpkg 2>/dev/null || true" ]
   - [ bash, -lc, "[ -f /var/lib/init-status/setup-complete ] && exit 0; systemctl stop xrdp xrdp-sesman 2>/dev/null || true; systemctl mask xrdp xrdp-sesman 2>/dev/null || true" ]
-  - [ bash, -lc, "mkdir -p /etc/needrestart/conf.d && echo \"\\$nrconf{restart} = 'a';\\n\\$nrconf{blacklist_rc} = [qr/^cloud-init/, qr/^cloud-final/, qr/^cloud-config/];\" > /etc/needrestart/conf.d/99-autorestart.conf" ]
+  # needrestart config handled by write_files section
   - [ bash, -lc, "[ -f /var/lib/init-status/setup-complete ] && exit 0; mkdir -p /tmp/downloads; curl -sL https://nodejs.org/dist/v22.12.0/node-v22.12.0-linux-x64.tar.xz -o /tmp/downloads/node.tar.xz & echo $! > /tmp/downloads/node.pid; wget -q -O /tmp/downloads/chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb & echo $! > /tmp/downloads/chrome.pid" ]
   - [ bash, -lc, "[ -f /var/lib/init-status/setup-complete ] && [ ! -f /var/lib/init-status/boot-complete ] && { echo '99' > /var/lib/init-status/stage; echo \"$(date -u +%Y-%m-%dT%H:%M:%SZ) STAGE=99 DESC=ready\" >> /var/log/init-stages.log; touch /var/lib/init-status/boot-complete; } || true" ]
 
@@ -74,14 +73,18 @@ write_files:
       GLOBAL_AGENT_NOTES_B64="[[GLOBAL_AGENT_NOTES_B64]]"
       AGENT1_NAME_B64="[[AGENT1_NAME_B64]]"
       AGENT1_NOTES_B64="[[AGENT1_NOTES_B64]]"
+      AGENT1_SOUL_B64="[[AGENT1_SOUL_B64]]"
       AGENT2_NAME_B64="[[AGENT2_NAME_B64]]"
       AGENT2_NOTES_B64="[[AGENT2_NOTES_B64]]"
+      AGENT2_SOUL_B64="[[AGENT2_SOUL_B64]]"
       AGENT2_BOT_TOKEN_B64="[[AGENT2_BOT_TOKEN_B64]]"
       AGENT3_NAME_B64="[[AGENT3_NAME_B64]]"
       AGENT3_NOTES_B64="[[AGENT3_NOTES_B64]]"
+      AGENT3_SOUL_B64="[[AGENT3_SOUL_B64]]"
       AGENT3_BOT_TOKEN_B64="[[AGENT3_BOT_TOKEN_B64]]"
       AGENT4_NAME_B64="[[AGENT4_NAME_B64]]"
       AGENT4_NOTES_B64="[[AGENT4_NOTES_B64]]"
+      AGENT4_SOUL_B64="[[AGENT4_SOUL_B64]]"
       AGENT4_BOT_TOKEN_B64="[[AGENT4_BOT_TOKEN_B64]]"
       COUNCIL_GROUP_ID_B64="[[COUNCIL_GROUP_ID_B64]]"
 
@@ -104,6 +107,21 @@ write_files:
       #!/bin/bash
       echo "$1" > /var/lib/init-status/phase
       echo "$(date -u +%Y-%m-%dT%H:%M:%S.%3NZ) PHASE=$1 DESC=$2" >> /var/log/init-stages.log
+
+  - path: /usr/local/bin/tg-notify.sh
+    permissions: "0755"
+    content: |
+      #!/bin/bash
+      # Send Telegram notification - used for early status messages
+      source /etc/droplet.env
+      d() { [ -n "$1" ] && echo "$1" | base64 -d 2>/dev/null || echo ""; }
+      TBT=$(d "$AGENT1_BOT_TOKEN_B64")
+      TUI=$(d "$TELEGRAM_USER_ID_B64")
+      [ -z "$TBT" ] || [ -z "$TUI" ] && exit 1
+      MSG="$1"
+      curl -sf --max-time 10 "https://api.telegram.org/bot${TBT}/sendMessage" \
+        -d "chat_id=${TUI}" \
+        -d "text=${MSG}" > /dev/null 2>&1
 
   - path: /etc/systemd/system/api-server.service
     permissions: "0644"
@@ -182,9 +200,13 @@ write_files:
       source /etc/droplet.env
       d() { [ -n "$1" ] && echo "$1" | base64 -d 2>/dev/null || echo ""; }
       S="/usr/local/bin/set-stage.sh"
+      TG="/usr/local/bin/tg-notify.sh"
       LOG="/var/log/phase1.log"
       echo "=== Phase 1 Start: $(date) ===" > "$LOG"
       START=$(date +%s)
+
+      # Send early notification
+      $TG "[INIT] Droplet starting up. Phase 1 in progress..."
 
       # Wait for node download (started in bootcmd)
       $S 1 "nodejs"
@@ -224,6 +246,9 @@ write_files:
 
       mkdir -p $H/.openclaw $H/openclaw/agents/agent1/memory
       echo "$GT" > $H/.openclaw/gateway-token.txt
+
+      # Symlink HEARTBEAT.md to agent1 workspace (critical for safe-mode detection)
+      ln -sf "$H/openclaw/HEARTBEAT.md" "$H/openclaw/agents/agent1/HEARTBEAT.md"
 
       # MINIMAL CONFIG - bulletproof, single agent, telegram only
       # No browser, no skills, no hooks - just enough to talk
@@ -327,10 +352,11 @@ write_files:
       Type=simple
       User=$USERNAME
       WorkingDirectory=$H
-      ExecStart=/usr/bin/openclaw gateway --bind lan --port 18789
+      ExecStart=/usr/local/bin/openclaw gateway --bind lan --port 18789
       Restart=always
       RestartSec=3
       Environment=NODE_ENV=production
+      Environment=NODE_OPTIONS=--experimental-sqlite
       Environment=ANTHROPIC_API_KEY=${AK}
       $([ -n "$GK" ] && echo "Environment=GOOGLE_API_KEY=${GK}")
       $([ -n "$GK" ] && echo "Environment=GEMINI_API_KEY=${GK}")
@@ -346,12 +372,24 @@ write_files:
       ufw allow 18789/tcp
 
       # Wait for bot to be ready
+      BOT_OK=false
       for i in {1..30}; do
-        systemctl is-active --quiet openclaw && break
+        if systemctl is-active --quiet openclaw; then
+          BOT_OK=true
+          break
+        fi
         sleep 1
       done
 
-      $S 5 "bot-online"
+      if [ "$BOT_OK" = "true" ]; then
+        $S 5 "bot-online"
+        $TG "[OK] Bot online! Phase 1 complete. Starting desktop setup..."
+      else
+        echo "WARNING: Bot failed to start" >> "$LOG"
+        journalctl -u openclaw -n 50 >> "$LOG" 2>&1
+        $TG "[WARN] Bot may not be running. Check logs: journalctl -u openclaw"
+      fi
+
       touch /var/lib/init-status/phase1-complete
       echo "$START" > /var/lib/init-status/phase1-time
 
@@ -566,12 +604,13 @@ write_files:
       systemctl restart xrdp
       ufw allow 3389/tcp
 
-      # Build and save full config
+      # Restore state from Dropbox BEFORE build-full-config
+      # so YAML-generated files always take precedence
       $S 17 "finalize"
-      /usr/local/sbin/build-full-config.sh
-
-      # Restore state from Dropbox
       /usr/local/bin/restore-openclaw-state.sh 2>/dev/null || true
+
+      # Build and save full config (overwrites YAML-owned files after restore)
+      /usr/local/sbin/build-full-config.sh
 
       # Enable auto-upgrades and sync timer
       systemctl enable unattended-upgrades apt-daily.timer apt-daily-upgrade.timer
@@ -585,20 +624,9 @@ write_files:
       DURATION=$((END - START))
       echo "=== Phase 2 Complete: ${DURATION} seconds ===" >> "$LOG"
 
-      # Announce reboot via Telegram API (not bot - it may restart)
-      TBT=$(d "$AGENT1_BOT_TOKEN_B64"); TUI=$(d "$TELEGRAM_USER_ID_B64")
-
-      curl -s "https://api.telegram.org/bot${TBT}/sendMessage" \
-        -d "chat_id=${TUI}" \
-        -d "parse_mode=Markdown" \
-        -d "text=[SETUP COMPLETE] Desktop ready.
-
-      Phase 2 finished in ${DURATION}s. Rebooting for clean state...
-      - RDP will be ready in ~60 seconds
-      - All skills installed
-      - Browser configured
-
-      *Back shortly!*"
+      # Announce reboot via Telegram
+      TG="/usr/local/bin/tg-notify.sh"
+      $TG "[SETUP COMPLETE] Desktop ready. Phase 2 finished in ${DURATION}s. Rebooting for clean state... Back shortly!"
 
       sleep 5
       $S 18 "reboot"
@@ -619,10 +647,10 @@ write_files:
 
       # Agent names and notes
       GAN=$(d "$GLOBAL_AGENT_NOTES_B64")
-      A1N=$(d "$AGENT1_NAME_B64"); A1N="${A1N:-Claude}"; A1NOTES=$(d "$AGENT1_NOTES_B64")
-      A2N=$(d "$AGENT2_NAME_B64"); A2N="${A2N:-GPT}"; A2T=$(d "$AGENT2_BOT_TOKEN_B64"); A2NOTES=$(d "$AGENT2_NOTES_B64")
-      A3N=$(d "$AGENT3_NAME_B64"); A3N="${A3N:-Gemini}"; A3T=$(d "$AGENT3_BOT_TOKEN_B64"); A3NOTES=$(d "$AGENT3_NOTES_B64")
-      A4N=$(d "$AGENT4_NAME_B64"); A4N="${A4N:-Opus}"; A4T=$(d "$AGENT4_BOT_TOKEN_B64"); A4NOTES=$(d "$AGENT4_NOTES_B64")
+      A1N=$(d "$AGENT1_NAME_B64"); A1N="${A1N:-Claude}"; A1NOTES=$(d "$AGENT1_NOTES_B64"); A1SOUL=$(d "$AGENT1_SOUL_B64")
+      A2N=$(d "$AGENT2_NAME_B64"); A2N="${A2N:-GPT}"; A2T=$(d "$AGENT2_BOT_TOKEN_B64"); A2NOTES=$(d "$AGENT2_NOTES_B64"); A2SOUL=$(d "$AGENT2_SOUL_B64")
+      A3N=$(d "$AGENT3_NAME_B64"); A3N="${A3N:-Gemini}"; A3T=$(d "$AGENT3_BOT_TOKEN_B64"); A3NOTES=$(d "$AGENT3_NOTES_B64"); A3SOUL=$(d "$AGENT3_SOUL_B64")
+      A4N=$(d "$AGENT4_NAME_B64"); A4N="${A4N:-Opus}"; A4T=$(d "$AGENT4_BOT_TOKEN_B64"); A4NOTES=$(d "$AGENT4_NOTES_B64"); A4SOUL=$(d "$AGENT4_SOUL_B64")
 
       CGI=$(d "$COUNCIL_GROUP_ID_B64")
       URN=$(d "$USER_REALNAME_B64"); UL=$(d "$USER_LOCATION_B64"); UN=$(d "$USER_NOTES_B64")
@@ -751,12 +779,19 @@ write_files:
       [ -n "$A3T" ] && echo -e "# Agent: ${A3N}\nModel: Gemini 3 Pro Preview\nBe helpful and natural." > $H/openclaw/agents/agent3/AGENTS.md
       [ -n "$A4T" ] && echo -e "# Agent: ${A4N}\nModel: Claude Opus 4.5\nBe helpful and natural." > $H/openclaw/agents/agent4/AGENTS.md
 
-      # Symlink shared context (TOOLS.md, USER.md) to all agent workspaces
+      # Create SOUL.md for each agent (if provided)
+      [ -n "$A1SOUL" ] && echo "$A1SOUL" > $H/openclaw/agents/agent1/SOUL.md
+      [ -n "$A2T" ] && [ -n "$A2SOUL" ] && echo "$A2SOUL" > $H/openclaw/agents/agent2/SOUL.md
+      [ -n "$A3T" ] && [ -n "$A3SOUL" ] && echo "$A3SOUL" > $H/openclaw/agents/agent3/SOUL.md
+      [ -n "$A4T" ] && [ -n "$A4SOUL" ] && echo "$A4SOUL" > $H/openclaw/agents/agent4/SOUL.md
+
+      # Symlink shared context (TOOLS.md, USER.md, HEARTBEAT.md) to all agent workspaces
       for _a in agent1 agent2 agent3 agent4; do
         _AD="$H/openclaw/agents/$_a"
         [ -d "$_AD" ] && {
           ln -sf "$H/openclaw/TOOLS.md" "$_AD/TOOLS.md" 2>/dev/null || true
           ln -sf "$H/openclaw/USER.md" "$_AD/USER.md" 2>/dev/null || true
+          ln -sf "$H/openclaw/HEARTBEAT.md" "$_AD/HEARTBEAT.md" 2>/dev/null || true
         }
       done
 
@@ -783,9 +818,39 @@ write_files:
         ln -sf "$H/.openclaw/agents/main/agent/auth-profiles.json" "$H/.openclaw/agents/$_ag/agent/auth-profiles.json"
       done
 
+      # Update systemd service with full environment
+      cat > /etc/systemd/system/openclaw.service <<SVC
+      [Unit]
+      Description=OpenClaw Gateway
+      After=network.target desktop.service
+      Wants=desktop.service
+      [Service]
+      Type=simple
+      User=$USERNAME
+      WorkingDirectory=$H
+      ExecStartPre=/bin/sleep 2
+      ExecStart=/usr/local/bin/openclaw gateway --bind lan --port 18789
+      ExecStop=/usr/local/bin/sync-openclaw-state.sh
+      TimeoutStopSec=30
+      Restart=always
+      RestartSec=3
+      Environment=NODE_ENV=production
+      Environment=NODE_OPTIONS=--experimental-sqlite
+      Environment=PATH=/usr/bin:/usr/local/bin
+      Environment=DISPLAY=:10
+      Environment=ANTHROPIC_API_KEY=${AK}
+      $([ -n "$GK" ] && echo "Environment=GOOGLE_API_KEY=${GK}")
+      $([ -n "$GK" ] && echo "Environment=GEMINI_API_KEY=${GK}")
+      $([ -n "$BK" ] && echo "Environment=BRAVE_API_KEY=${BK}")
+      [Install]
+      WantedBy=multi-user.target
+      SVC
+
+      systemctl daemon-reload
+
       chown -R $USERNAME:$USERNAME $H/.openclaw $H/openclaw
       chmod 700 $H/.openclaw
-      chmod 600 $H/.openclaw/openclaw.json $H/.openclaw/openclaw.full.json $H/.openclaw/openclaw.minimal.json
+      chmod 600 $H/.openclaw/openclaw.json $H/.openclaw/openclaw.full.json $H/.openclaw/openclaw.minimal.json 2>/dev/null || true
 
   - path: /etc/systemd/system/post-boot-check.service
     permissions: "0644"
@@ -809,8 +874,7 @@ write_files:
       source /etc/droplet.env
       d() { [ -n "$1" ] && echo "$1" | base64 -d 2>/dev/null || echo ""; }
       H="/home/$USERNAME"
-      TBT=$(d "$AGENT1_BOT_TOKEN_B64")
-      TUI=$(d "$TELEGRAM_USER_ID_B64")
+      TG="/usr/local/bin/tg-notify.sh"
       LOG="/var/log/post-boot-check.log"
 
       echo "=== Post-boot check: $(date) ===" >> "$LOG"
@@ -821,8 +885,8 @@ write_files:
         exit 0
       }
 
-      # Wait for openclaw to stabilize
-      sleep 10
+      # Wait for openclaw to stabilize (15s for 4 agents + telegram connections)
+      sleep 15
 
       # Check if full config exists
       if [ ! -f "$H/.openclaw/openclaw.full.json" ]; then
@@ -867,17 +931,9 @@ write_files:
         rm -f /var/lib/init-status/needs-post-boot-check
         rm -f /var/lib/init-status/safe-mode
         rm -f "$H/openclaw/agents/agent1/SAFE_MODE.md"
+        touch /var/lib/init-status/setup-complete
 
-        # Send success message via Telegram API
-        curl -s "https://api.telegram.org/bot${TBT}/sendMessage" \
-          -d "chat_id=${TUI}" \
-          -d "parse_mode=Markdown" \
-          -d "text=[OK] Fully operational.
-
-      Full config applied. All systems ready.
-      - RDP: port 3389
-      - Browser automation: ready
-      - Skills: installed"
+        $TG "[OK] Fully operational. Full config applied. All systems ready. RDP: port 3389."
 
       else
         echo "Full config FAILED, reverting to safe mode" >> "$LOG"
@@ -931,15 +987,7 @@ write_files:
 
         rm -f /var/lib/init-status/needs-post-boot-check
 
-        # Send safe mode message via Telegram API
-        curl -s "https://api.telegram.org/bot${TBT}/sendMessage" \
-          -d "chat_id=${TUI}" \
-          -d "parse_mode=Markdown" \
-          -d "text=[SAFE MODE] Running minimal config.
-
-      Full config failed health checks. Bot is attempting repairs.
-
-      Check logs: journalctl -u openclaw"
+        $TG "[SAFE MODE] Running minimal config. Full config failed health checks. Bot is attempting repairs."
       fi
 
   - path: /usr/local/bin/try-full-config.sh
@@ -948,10 +996,7 @@ write_files:
       #!/bin/bash
       # Called by safe-mode bot to attempt full config
       source /etc/droplet.env
-      d() { [ -n "$1" ] && echo "$1" | base64 -d 2>/dev/null || echo ""; }
       H="/home/$USERNAME"
-      TBT=$(d "$AGENT1_BOT_TOKEN_B64")
-      TUI=$(d "$TELEGRAM_USER_ID_B64")
 
       echo "Attempting full config at $(date)"
 
@@ -1149,31 +1194,49 @@ write_files:
     permissions: "0755"
     content: |
       #!/bin/bash
+      # Restore bot-owned files from Dropbox (memory + user identity)
+      # TOOLS.md is NOT restored - YAML is authoritative for that
       source /etc/droplet.env
       d() { [ -n "$1" ] && echo "$1" | base64 -d 2>/dev/null || echo ""; }
       DBT=$(d "$DROPBOX_TOKEN_B64"); [ -z "$DBT" ] && exit 0
       HN=$(d "$HABITAT_NAME_B64"); HN="${HN:-default}"
       H="/home/$USERNAME"; R="dropbox:openclaw-memory/${HN}"
-      for f in MEMORY.md TOOLS.md USER.md; do su - $USERNAME -c "rclone copy '$R/$f' '$H/openclaw/' 2>/dev/null" || true; done
+      # Restore bot-owned workspace files (not TOOLS.md - YAML manages that)
+      for f in MEMORY.md USER.md; do su - $USERNAME -c "rclone copy '$R/$f' '$H/openclaw/' 2>/dev/null" || true; done
+      # Restore agent memory directories
       for a in agent1 agent2 agent3 agent4; do
         AD="$H/openclaw/agents/$a"; [ -d "$AD" ] || continue
         su - $USERNAME -c "rclone copy '$R/agents/${a}/memory/' '$AD/memory/' 2>/dev/null" || true
       done
-      chown -R $USERNAME:$USERNAME $H/openclaw
+      # Restore transcripts
+      for a in agent1 agent2 agent3 agent4; do
+        TD="$H/.openclaw/agents/$a/sessions"; [ -d "$TD" ] || mkdir -p "$TD"
+        su - $USERNAME -c "rclone copy '$R/agents/${a}/sessions/' '$TD/' 2>/dev/null" || true
+      done
+      chown -R $USERNAME:$USERNAME $H/openclaw $H/.openclaw
 
   - path: /usr/local/bin/sync-openclaw-state.sh
     permissions: "0755"
     content: |
       #!/bin/bash
+      # Sync bot-owned state to Dropbox (memory, user identity, transcripts)
+      # TOOLS.md is NOT synced - YAML is authoritative for that
       source /etc/droplet.env
       d() { [ -n "$1" ] && echo "$1" | base64 -d 2>/dev/null || echo ""; }
       DBT=$(d "$DROPBOX_TOKEN_B64"); [ -z "$DBT" ] && exit 0
       HN=$(d "$HABITAT_NAME_B64"); HN="${HN:-default}"
       H="/home/$USERNAME"; R="dropbox:openclaw-memory/${HN}"
-      for f in MEMORY.md TOOLS.md USER.md; do [ -f "$H/openclaw/$f" ] && su - $USERNAME -c "rclone copy '$H/openclaw/$f' '$R/' 2>/dev/null" || true; done
+      # Sync bot-owned workspace files
+      for f in MEMORY.md USER.md; do [ -f "$H/openclaw/$f" ] && su - $USERNAME -c "rclone copy '$H/openclaw/$f' '$R/' 2>/dev/null" || true; done
+      # Sync agent memory directories
       for a in agent1 agent2 agent3 agent4; do
         AD="$H/openclaw/agents/$a"; [ -d "$AD" ] || continue
         su - $USERNAME -c "rclone sync '$AD/memory' '$R/agents/${a}/memory' 2>/dev/null" || true
+      done
+      # Sync transcripts (copy only, don't delete old sessions from Dropbox)
+      for a in agent1 agent2 agent3 agent4; do
+        TD="$H/.openclaw/agents/$a/sessions"
+        [ -d "$TD" ] && su - $USERNAME -c "rclone copy '$TD/' '$R/agents/${a}/sessions/' --include '*.jsonl' 2>/dev/null" || true
       done
 
   - path: /usr/local/bin/schedule-destruct.sh
