feat: dual-platform parse-habitat.py + env vars (closes #2, closes #3)
Update parse-habitat.py to read new dual-platform habitat JSON schema.
Add Discord env vars to droplet.env template.
Add pytest unit tests for habitat parsing.

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -17,6 +17,10 @@ write_files:
       SSH_KEY_B64=""
       DO_TOKEN_B64="[[DO_TOKEN_B64]]"
       PASSWORD_B64="[[PASSWORD_B64]]"
+      PLATFORM_B64="[[PLATFORM_B64]]"
+      DISCORD_GUILD_ID_B64="[[DISCORD_GUILD_ID_B64]]"
+      DISCORD_OWNER_ID_B64="[[DISCORD_OWNER_ID_B64]]"
+      TELEGRAM_OWNER_ID_B64="[[TELEGRAM_OWNER_ID_B64]]"
       TELEGRAM_USER_ID_B64="[[TELEGRAM_USER_ID_B64]]"
       ANTHROPIC_KEY_B64="[[ANTHROPIC_KEY_B64]]"
       BRAVE_KEY_B64="[[BRAVE_KEY_B64]]"
@@ -96,8 +100,28 @@ write_files:
           f.write('DESTRUCT_MINS="{}"\n'.format(hab.get("destructMinutes", 0)))
           f.write('DESTRUCT_MINS_B64="{}"\n'.format(b64(str(hab.get("destructMinutes", 0)))))
           f.write('BG_COLOR="{}"\n'.format(hab.get("bgColor", "2D3748")))
+          # Platform (default: "telegram" for backward compat)
+          platform = hab.get("platform", "telegram")
+          f.write('PLATFORM="{}"\n'.format(platform))
+          f.write('PLATFORM_B64="{}"\n'.format(b64(platform)))
+          # Discord config
+          discord_cfg = hab.get("discord", {})
+          f.write('DISCORD_GUILD_ID="{}"\n'.format(discord_cfg.get("serverId", "")))
+          f.write('DISCORD_GUILD_ID_B64="{}"\n'.format(b64(discord_cfg.get("serverId", ""))))
+          f.write('DISCORD_OWNER_ID="{}"\n'.format(discord_cfg.get("ownerId", "")))
+          f.write('DISCORD_OWNER_ID_B64="{}"\n'.format(b64(discord_cfg.get("ownerId", ""))))
+          # Telegram config
+          telegram_cfg = hab.get("telegram", {})
+          telegram_owner_id = telegram_cfg.get("ownerId", "")
+          f.write('TELEGRAM_OWNER_ID="{}"\n'.format(telegram_owner_id))
+          f.write('TELEGRAM_OWNER_ID_B64="{}"\n'.format(b64(telegram_owner_id)))
+          # Backward compat: keep TELEGRAM_USER_ID_B64 as alias
+          f.write('TELEGRAM_USER_ID_B64="{}"\n'.format(b64(telegram_owner_id)))
+          # Council config (supports nested telegram.groupId and legacy groupId)
           council = hab.get("council", {})
-          f.write('COUNCIL_GROUP_ID="{}"\n'.format(council.get("groupId", hab.get("councilGroupId", ""))))
+          council_tg = council.get("telegram", {})
+          council_group_id = council_tg.get("groupId", council.get("groupId", hab.get("councilGroupId", "")))
+          f.write('COUNCIL_GROUP_ID="{}"\n'.format(council_group_id))
           f.write('COUNCIL_GROUP_NAME="{}"\n'.format(council.get("groupName", "")))
           f.write('COUNCIL_JUDGE="{}"\n'.format(council.get("judge", "")))
           f.write('HABITAT_DOMAIN="{}"\n'.format(hab.get("domain", "")))
@@ -120,10 +144,20 @@ write_files:
               boot = lib_entry.get("boot", "")
               bootstrap = lib_entry.get("bootstrap", "")
               user = lib_entry.get("user", "")
+              # Telegram bot token: prefer telegramBotToken, fall back to botToken for compat
+              tg_bot_token = agent_ref.get("telegramBotToken", agent_ref.get("botToken", ""))
+              # Discord bot token
+              dc_bot_token = agent_ref.get("discordBotToken", "")
               f.write('AGENT{}_NAME="{}"\n'.format(n, name))
               f.write('AGENT{}_NAME_B64="{}"\n'.format(n, b64(name)))
-              f.write('AGENT{}_BOT_TOKEN="{}"\n'.format(n, agent_ref["botToken"]))
-              f.write('AGENT{}_BOT_TOKEN_B64="{}"\n'.format(n, b64(agent_ref["botToken"])))
+              # Backward compat: BOT_TOKEN = telegram bot token
+              f.write('AGENT{}_BOT_TOKEN="{}"\n'.format(n, tg_bot_token))
+              f.write('AGENT{}_BOT_TOKEN_B64="{}"\n'.format(n, b64(tg_bot_token)))
+              # Explicit per-platform tokens
+              f.write('AGENT{}_TELEGRAM_BOT_TOKEN="{}"\n'.format(n, tg_bot_token))
+              f.write('AGENT{}_TELEGRAM_BOT_TOKEN_B64="{}"\n'.format(n, b64(tg_bot_token)))
+              f.write('AGENT{}_DISCORD_BOT_TOKEN="{}"\n'.format(n, dc_bot_token))
+              f.write('AGENT{}_DISCORD_BOT_TOKEN_B64="{}"\n'.format(n, b64(dc_bot_token)))
               f.write('AGENT{}_MODEL="{}"\n'.format(n, model))
               f.write('AGENT{}_IDENTITY_B64="{}"\n'.format(n, b64(identity)))
               f.write('AGENT{}_SOUL_B64="{}"\n'.format(n, b64(soul)))
@@ -132,7 +166,7 @@ write_files:
               f.write('AGENT{}_BOOTSTRAP_B64="{}"\n'.format(n, b64(bootstrap)))
               f.write('AGENT{}_USER_B64="{}"\n'.format(n, b64(user)))
       os.chmod('/etc/habitat-parsed.env', 0o600)
-      print("Parsed habitat '{}' with {} agents".format(hab['name'], len(agents)))
+      print("Parsed habitat '{}' with {} agents (platform: {})".format(hab['name'], len(agents), platform))
   - path: /usr/local/bin/tg-notify.sh
     permissions: "0755"
     content: |
